# kenning-zephyr-runtime-example-app

./: .ci.yml  .gitignore  README.md
.devcontainer/automl/: devcontainer.json
app/: CMakeLists.txt  Kconfig  ai8x_c.conf  prj.conf  tflite.conf  tvm.conf  west.yml
app/boards/: max78002evkit_max78002_m4.overlay
app/src/: main.c
environments/: Dockerfile
scripts/: build.sh
